--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 nav {
     height: 35px;
     margin: 0 auto; /* center the navbar horizontally */
-    width: 50%;
+    width: auto;
+    font-family:Arial, Helvetica, sans-serif;
   }
   
   nav ul {
@@ -30,38 +31,15 @@ nav {
   nav a:hover{
     text-decoration: underline;
   }
-  
-/* #menu
-{
-	position: fixed;
-	width:50%;
-	height: 35px;
-    margin: auto;
-    
-    z-index: 1;
-    top: 0;
-	
-}
 
-ul{
-    padding: 10px;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-    background:  rgba(0, 119, 190,0.5 );
-}
-li{
-    display: inline;
-    margin: 10px; 
-    text-align: center;
-}
-*/
 section{
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
     color: white;
     transition: background-color 1s ease-in-out;
+    transition: color 1s ease-in-out;
     background-color: rgba(0, 119, 190, 0.5 );
+    transition: background-color 0.6s ease-in-out;
 
 } 
 #about{
@@ -71,56 +49,141 @@ section{
 }
 #titles{
     background-color: rgba(0, 119, 190, 0.5 );
-    padding: 5px;
-    border-radius: 3px;
+    padding: 10px;
+    border-radius: 150px;
 }
 
 section:hover{
     background-color:rgb(237, 239, 131,0.8) ; /* light gray color code on hover */
+    color: rgb(26, 24, 24);
+    transition: color 1s ease-in-out;
+    transition: background-color 0.6s ease-in-out;
 
 }
-
-.like-button {
-    background-color: rgba(0, 119, 190, 0.5 );
-    border: none;
-    border-radius: 5px;
-    color: white;
-    cursor: pointer;
-    display: inline-flex;
+.form-container{
+    width: 100%;
+    height: 80vh;
+    display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 65px;
-   
-  }
-  
+}
+form{
+  display: flex;
+  flex-direction: column;
+  padding: 2vw 4vw;
+  width: 90%;
+  max-width: 600px;
+  border-radius: 10px;
+  align-items: center;
+
+}
+form input,form textarea{
+  border: 0;
+  margin: 10px 0;
+  padding: 20px;
+  outline: none;
+  font-size: 16px;
+  border-radius: 25px;
+  width: 300px;
+}
+form select{
+  border: 0;
+  margin: 10px 0;
+  padding: 20px;
+  outline: none;
+  font-size: 16px;
+  border-radius: 25px;
+  width: 100px;
+  align-items: center;
+}
  
+  #submit-but{
+    padding: 10px 20px;
+    font-size: 12px;
+    border-radius: 20px;
+    border-color: white;
+    letter-spacing: 1px;
+    background-color: rgb(255, 255, 255);
+    box-shadow:1px 1px 2px #c2c2c2 ;
+    width: 100px;
+  }
+ 
+  #submit-but:hover{
+    background-color: rgb(237, 239, 131,0.8); /* Darker yellow on hover */
+    cursor: pointer;
+  }
+  /* textarea{
+   
+    height: 70px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    box-shadow:1px 1px 2px #c2c2c2 ;
+    
+  } */
   
-  .like-button img {
-    height: 50px; /* set the height to 15px to make it smaller */
-    padding-right: 10px;
+  .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .image-grid{
+    width: 67%;
+    display: grid;
+    box-sizing: border-box;
+    padding: 16px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 220px;
+    gap: 10px;
+    
     
   }
-  
-  #like-count {
-    display: inline-block;
-    margin-left: 10px;
-    font-weight: bold;
+  .image-grid > img{
+    
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: fit;
   }
-  .like-button:active {
-    animation-name: like-bounce;
-    animation-duration: 0.3s;
+  .image-grid-col-2{
+    grid-column: span 2;
+  
   }
-  
-  @keyframes like-bounce {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.2);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  
-  
+.image-grid-row-2{
+    grid-row: span 2;
+}
+.about-me{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin: 20px;
+    font-size: 25px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.qrcode{
+    width: 120px;
+    height: 120px;
+    margin: 20px;
+    padding: 6px;
+    object-fit: fit;
+    background-color: white;
+    border-radius: 7px;
+    transition: transform 0.7s ease-in-out;
+}
+.qrcode:hover{
+    transform: scale(1.7);
+    transition: transform 0.7s ease-in-out;
+}
+.footer{
+   
+    font-size: 12px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:  rgba(0, 119, 190, 0.5 );
+   padding: 6px;
+}
+.fb-like{
+  border-radius: 5px;
+}
