--- a/style.css
+++ b/style.css
@@ -196,3 +196,15 @@ form select{
 .fb-like{
   border-radius: 5px;
 }
+h2{
+  text-decoration: underline;
+}
+.bullet{
+  list-style-type: upper-roman;
+  
+}
+section li{
+  text-align: left;
+  margin-left: 20px;
+  margin-right: 20px;
+}
