--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ form input,form textarea{
   font-size: 16px;
   border-radius: 25px;
   width: 300px;
+  max-width:800px;
+  max-height: 150px;
 }
 form select{
   border: 0;
