--- a/style.css
+++ b/style.css
@@ -103,8 +103,8 @@ form input,form textarea{
   font-size: 16px;
   border-radius: 25px;
   width: 300px;
-  max-width:800px;
-  max-height: 150px;
+  max-width:35vw;
+  max-height: 12vw;
 }
 form select{
   border: 0;
@@ -213,4 +213,25 @@ section li{
   text-align: left;
   margin-left: 20px;
   margin-right: 20px;
+}
+.scrollButton{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(0, 119, 190, 0.5 );
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.6s ease-in-out;
+  cursor: pointer;
+}
+.scrollButton:hover{
+  background-color: rgb(237, 239, 131,0.8);
+  transition: background-color 0.6s ease-in-out;
+}
+.arrow-img{
+ width: 3.3vw;
 }
