--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ form select{
     height: 100%;
     border-radius: 10px;
     object-fit: fit;
+    transition: transform 0.7s ease-in-out;
   }
   img:hover{
     transform:scale(1.2) ;
@@ -216,22 +217,22 @@ section li{
 }
 .scrollButton{
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 40px;
-  height: 40px;
-  background-color: rgba(0, 119, 190, 0.5 );
+  bottom: 3vw;
+  right: 3vw;
+  width: 3.3vw;
+  height: 3.3vw;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 0.6s ease-in-out;
   cursor: pointer;
-}
-.scrollButton:hover{
-  background-color: rgb(237, 239, 131,0.8);
-  transition: background-color 0.6s ease-in-out;
 }
 .arrow-img{
  width: 3.3vw;
+
+ transition: transform 0.7s ease-in-out;
+}
+.arrow-img:hover{
+  transform: scale(1.4);
+  transition: transform 0.7s ease-in-out;
 }
