--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ section:hover{
 }
 .form-container{
     width: 100%;
-    height: 80vh;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
